NYCUI-541 View Full Routes in stop cards are too light

--- a/src/css/bustime.sass
+++ b/src/css/bustime.sass
@@ -353,11 +353,11 @@
       li
         border-bottom: 1px solid $border-gray
         button
-          color: $dark-gray
+          color: $black3
           .svg-icon-wrap
             svg
               path
-                fill: $dark-gray
+                fill: $black3
           // &:focus-visible
           //   color: $white
           //   .svg-icon-wrap
